@@ -1,18 +1,18 @@
 package com.example.bbmovie.controller.publics;
 
 import com.example.bbmovie.security.jose.jwk.JwkService;
-import lombok.extern.log4j.Log4j2;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.CacheControl;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 
-@Log4j2
 @RestController
 @RequestMapping("/.well-known/jwks.json")
 public class JoseController {
@@ -24,17 +24,23 @@ public class JoseController {
         this.jwkService = jwkService;
     }
 
+    @GetMapping
+    public ResponseEntity<Map<String, Object>> getJwk() {
+        List<Map<String, Object>> jwks = jwkService.getAllPublicJwks();
+        return ResponseEntity.ok()
+                .cacheControl(CacheControl.maxAge(1, TimeUnit.HOURS).cachePublic())
+                .body(Map.of("keys", jwks));
+    }
+
     @GetMapping("/all")
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
     public Map<String, Object> getJwks() {
         return Map.of("keys", List.of(jwkService.getAllActiveJwks()));
     }
 
-    @GetMapping
-    public ResponseEntity<Map<String, Object>> getJwk() {
-        List<Map<String, Object>> jwks = Collections.singletonList(jwkService.getJwk());
-
-        Map<String, Object> result = Map.of("keys", jwks);
-        log.info("Returning jwk: {}", result);
-        return ResponseEntity.ok(result);
+    @GetMapping("/active")
+    @PreAuthorize("hasRole('ROLE_ADMIN')")
+    public Map<String, Object> getActiveJwks() {
+        return Map.of("keys", List.of(jwkService.getJwk()));
     }
 }
